--- a/deploy/testnet.yaml
+++ b/deploy/testnet.yaml
@@ -1,4 +1,4 @@
-chain: [0,1] #,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19]
+chain: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19]
 deployer: util-lib-deployer
 gov-key: 44aeb439adbd8f135aac96031c8523ead314fad6c2f9b19326b17d6bc33ff72d
 deployer-key: e31e8d123e9b062c2b375f9841191577f8d499d9eb5f137d519e13ddb6121bf7
