--- a/pact/Makefile
+++ b/pact/Makefile
@@ -1,25 +1,34 @@
 PACT = pact
+REMOVE_WARNINGS = true
+
+ifeq ($(REMOVE_WARNINGS), true)
+	POST = |grep -v Warning
+else
+	POST =
+endif
+
 
 all: test
 
 test-util-lists:
-	$(PACT) tests_repl/util-lists-test.repl
+	@echo $(POST)
+	$(PACT) tests_repl/util-lists-test.repl $(POST)
 	@echo ""
 
 test-util-strings:
-	$(PACT) tests_repl/util-strings-test.repl
+	$(PACT) tests_repl/util-strings-test.repl $(POST)
 	@echo ""
 
 test-util-math:
-	$(PACT) tests_repl/util-math-test.repl
+	$(PACT) tests_repl/util-math-test.repl $(POST)
 	@echo ""
 
 test-util-time:
-	$(PACT) tests_repl/util-time-test.repl
+	$(PACT) tests_repl/util-time-test.repl $(POST)
 	@echo ""
 
 test-util-random:
-	$(PACT) tests_repl/util-random-test.repl
+	$(PACT) tests_repl/util-random-test.repl $(POST)
 	@echo ""
 
 test: test-util-lists test-util-strings test-util-math test-util-time test-util-random
