RHide warnings for zk as weel

--- a/pact/Makefile
+++ b/pact/Makefile
@@ -32,7 +32,7 @@ test-util-random:
 	@echo ""
 
 test-util-zk:
-		$(PACT) tests_repl/util-zk-test.repl
+		$(PACT) tests_repl/util-zk-test.repl $(POST)
 		@echo ""
 
 test: test-util-lists test-util-strings test-util-math test-util-time test-util-random test-util-zk
