Review deployment makefile

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -23,21 +23,26 @@ TESTNET_NODE = api.testnet.chainweb.com
 
 MAINNET_NODE = api.chainweb.com
 
+TESTNET_DATA = testnet.yaml
+
+MAINNET_DATA = mainnet.yaml
+
 
 .PHONY:  testnet testnet-local testnet-gen mainnet mainnet-local mainnet-gen deploy
+
+define \n
+
+
+endef
 
 .pact/%.pact : ../pact/contracts/%.pact
 	@mkdir -p .pact/
 	echo "(namespace 'free)" | cat - $< > $@
 
-testnet-gen: $(TEMP_PACT_FILES)  $(TESTNET_KEYS)
-	kda gen -t util-lists.tkpl -d testnet.yaml -o tx-testnet-util-lists-{{chain}}.yaml
-	kda gen -t util-strings.tkpl -d testnet.yaml -o tx-testnet-util-strings-{{chain}}.yaml
-	kda gen -t util-math.tkpl -d testnet.yaml -o tx-testnet-util-math-{{chain}}.yaml
-	kda gen -t util-time.tkpl -d testnet.yaml -o tx-testnet-util-time-{{chain}}.yaml
-	kda gen -t util-random.tkpl -d testnet.yaml -o tx-testnet-util-random-{{chain}}.yaml
-	kda sign -k keys/testnet-gas.key.yaml tx-testnet-*.yaml
-	kda sign -k keys/testnet-gov.key.yaml tx-testnet-*.yaml
+testnet-gen: $(TEMP_PACT_FILES)  $(TESTNET_KEYS) $(TESTNET_DATA)
+	$(foreach suffix,$(SUFFIXES), $(KDA_TOOL) gen -t util-$(suffix).tkpl -d $(TESTNET_DATA) -o tx-testnet-util-$(suffix)-{{chain}}.yaml${\n})
+	$(KDA_TOOL) sign -k keys/testnet-gas.key.yaml tx-testnet-*.yaml
+	$(KDA_TOOL) sign -k keys/testnet-gov.key.yaml tx-testnet-*.yaml
 
 
 testnet-local: testnet-gen
@@ -49,17 +54,13 @@ testnet: testnet-gen
 	                              sleep 180; \
 	                              $(KDA_TOOL) poll tx-testnet-util-$(suffix)-*.json -n $(TESTNET_NODE) | jq ; )
 
-	kda poll tx-testnet-*.json -n $(TESTNET_NODE)| jq > testnet-deploy-log.json
+	$(KDA_TOOL) poll tx-testnet-*.json -n $(TESTNET_NODE)| jq > testnet-deploy-log.json
 
 
-mainnet-gen: $(TEMP_PACT_FILES)  $(MAINNET_KEYS)
-	kda gen -t util-lists.tkpl -d mainnet.yaml -o tx-mainnet-util-lists-{{chain}}.yaml
-	kda gen -t util-strings.tkpl -d mainnet.yaml -o tx-mainnet-util-strings-{{chain}}.yaml
-	kda gen -t util-math.tkpl -d mainnet.yaml -o tx-mainnet-util-math-{{chain}}.yaml
-	kda gen -t util-time.tkpl -d mainnet.yaml -o tx-mainnet-util-time-{{chain}}.yaml
-	kda gen -t util-random.tkpl -d mainnet.yaml -o tx-mainnet-util-random-{{chain}}.yaml
-	kda sign -k keys/mainnet-gov.key.yaml tx-mainnet-*.yaml
-	kda sign -k keys/mainnet-gas.key.yaml tx-mainnet-*.yaml
+mainnet-gen: $(TEMP_PACT_FILES)  $(MAINNET_KEYS) $(MAINNET_DATA)
+	$(foreach suffix,$(SUFFIXES), $(KDA_TOOL) gen -t util-$(suffix).tkpl -d $(MAINNET_DATA) -o tx-mainnet-util-$(suffix)-{{chain}}.yaml${\n})
+	$(KDA_TOOL) sign -k keys/mainnet-gov.key.yaml tx-mainnet-*.yaml
+	$(KDA_TOOL) sign -k keys/mainnet-gas.key.yaml tx-mainnet-*.yaml
 
 
 mainnet-local: mainnet-gen
@@ -69,7 +70,7 @@ mainnet: mainnet-gen
 	$(foreach suffix,$(SUFFIXES), $(KDA_TOOL) send tx-mainnet-util-$(suffix)-*.json -n $(MAINNET_NODE) | jq ; \
 	                              sleep 180; \
 	                              $(KDA_TOOL) poll tx-mainnet-util-$(suffix)-*.json -n $(MAINNET_NODE) | jq ; )
-	kda poll tx-mainnet-*.json -n $(MAINNET_NODE)| jq > mainnet-deploy-log.json
+	$(KDA_TOOL) poll tx-mainnet-*.json -n $(MAINNET_NODE)| jq > mainnet-deploy-log.json
 
 
 deploy: testnet mainnet
