Review deployment scripts

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -1,18 +1,3 @@
-TEMP_PACT_FILES = .pact/util-chain-data.pact \
-                  .pact/util-lists.pact \
-                  .pact/util-strings.pact \
-                  .pact/util-math.pact \
-                  .pact/util-time.pact \
-                  .pact/util-random.pact \
-                  .pact/util-fungible.pact \
-                  .pact/util-zk.pact
-
-TESTNET_KEYS = keys/testnet-gas.key.yaml \
-               keys/testnet-gov.key.yaml
-
-MAINNET_KEYS = keys/mainnet-gas.key.yaml \
-               keys/mainnet-gov.key.yaml
-
 SUFFIXES = chain-data \
            lists \
            strings \
@@ -22,8 +7,15 @@ SUFFIXES = chain-data \
            fungible \
            zk
 
-KDA_TOOL = kda
+TESTNET_KEYS = keys/testnet-gas.key.yaml \
+               keys/testnet-gov.key.yaml
 
+MAINNET_KEYS = keys/mainnet-gas.key.yaml \
+               keys/mainnet-gov.key.yaml
+
+TEMP_PACT_FILES = $(foreach suffix,$(SUFFIXES),.pact/util-${suffix}.pact)
+
+KDA_TOOL = kda
 
 TESTNET_NODE = api.testnet.chainweb.com
 
@@ -34,12 +26,14 @@ TESTNET_DATA = testnet.yaml
 MAINNET_DATA = mainnet.yaml
 
 
-.PHONY:  testnet testnet-local testnet-gen mainnet mainnet-local mainnet-gen deploy
+.PHONY: testnet testnet-local testnet-gen mainnet mainnet-local mainnet-gen deploy
 
 define \n
 
 
 endef
+
+all: testnet-gen mainnet-gen
 
 .pact/%.pact : ../pact/contracts/%.pact
 	@mkdir -p .pact/
@@ -47,8 +41,7 @@ endef
 
 testnet-gen: $(TEMP_PACT_FILES)  $(TESTNET_KEYS) $(TESTNET_DATA)
 	$(foreach suffix,$(SUFFIXES), $(KDA_TOOL) gen -t util-$(suffix).tkpl -d $(TESTNET_DATA) -o tx-testnet-util-$(suffix)-{{chain}}.yaml${\n})
-	$(KDA_TOOL) sign -k keys/testnet-gas.key.yaml tx-testnet-*.yaml
-	$(KDA_TOOL) sign -k keys/testnet-gov.key.yaml tx-testnet-*.yaml
+	$(foreach key_f, ${TESTNET_KEYS}, $(KDA_TOOL) sign -k ${key_f} tx-testnet-*.yaml;${\n})
 
 
 testnet-local: testnet-gen
@@ -65,8 +58,7 @@ testnet: testnet-gen
 
 mainnet-gen: $(TEMP_PACT_FILES)  $(MAINNET_KEYS) $(MAINNET_DATA)
 	$(foreach suffix,$(SUFFIXES), $(KDA_TOOL) gen -t util-$(suffix).tkpl -d $(MAINNET_DATA) -o tx-mainnet-util-$(suffix)-{{chain}}.yaml${\n})
-	$(KDA_TOOL) sign -k keys/mainnet-gov.key.yaml tx-mainnet-*.yaml
-	$(KDA_TOOL) sign -k keys/mainnet-gas.key.yaml tx-mainnet-*.yaml
+	$(foreach key_f, ${MAINNET_KEYS}, $(KDA_TOOL) sign -k ${key_f} tx-mainnet-*.yaml;${\n})
 
 
 mainnet-local: mainnet-gen
